--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@mantine/hooks": "^4.2.11",
     "@mantine/modals": "^4.2.11",
     "@mantine/next": "^4.2.11",
+    "axios": "^0.27.2",
     "next": "12.2.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-query": "^3.39.1"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
