--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/styled": "^11.9.3",
     "@mantine/core": "^4.2.11",
     "@mantine/hooks": "^4.2.11",
     "@mantine/modals": "^4.2.11",
     "@mantine/next": "^4.2.11",
+    "@mui/x-data-grid": "^5.12.3",
     "axios": "^0.27.2",
     "next": "12.2.0",
     "react": "18.2.0",
