--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@mui/material": "^5.8.6",
     "@mui/x-data-grid": "^5.12.3",
     "axios": "^0.27.2",
+    "lodash": "^4.17.21",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.182",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
